--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
     "no-param-reassign": "off",
     "eol-last": "off",
     "import/extensions": [ 1, {
-      "js": "always", "json": "always"
+      "js": "always", "json": "always",
+      "import/no-unresolved": "off"
     }]
   },
   "ignorePatterns": [
