--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,7 @@
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
-    "import/extensions": [ 1, {
-      "js": "always", "json": "always",
-      "import/no-unresolved": "off"
-    }]
+    "import/extensions": "off"
   },
   "ignorePatterns": [
     "dist/",
