update json files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "to_do_list",
+  "name": "todolist",
   "version": "1.0.0",
   "description": "<a name=\"readme-top\"></a>",
   "private": true,
